.metadata/.plugins/org.eclipse.cdt.ui/002SampleApp.build.log
10:49:04 **** Incremental Build of configuration Debug for project 002SampleApp ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:131:20: error: 'pNumbers' undeclared (first use in this function); did you mean 'numbers'?
     insertion_sort(pNumbers, len);
                    ^~~~~~~~
                    numbers
../Src/main.c:131:20: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:49:05 Build Failed. 2 errors, 0 warnings. (took 1s.369ms)

